--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gapi-script": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-drag-drop-files": "^2.3.10",
     "react-icons": "^5.0.1",
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.1",
