--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "base-64": "^1.0.0",
     "gapi-script": "^1.2.0",
+    "jspdf": "^2.5.1",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-drag-drop-files": "^2.3.10",
     "react-icons": "^5.0.1",
+    "react-modal": "^3.16.1",
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
     "styled-components": "^6.1.8",
+    "validator": "^13.12.0",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
